@@ -89,6 +89,13 @@ preserve_cache = false
 # this variable, else overballooning may occur.
 maxmem_file = /var/run/xenballoon-maxmem
 
+## Type: integer (must be > 0)
+## Default: 1536
+#
+# Maximum allowed size in megabytes.
+# May be overridden by {memory/softmaxmem}
+soft_max_mem = 1536
+
 ## Type: boolean
 ## Default: true
 #
